@@ -166,7 +166,7 @@ class RegisterDomainPage extends SolidStatePage
     $module = $registry->getModule( $this->purchaseDBO->getModuleName() );
 
     // Set the time of purchase
-    $this->purchaseDBO->setDate( $this->DB->format_datetime( time() ) );
+    $this->purchaseDBO->setDate( DBConnection::format_datetime( time() ) );
 
     // Prepare contact info
     $contacts['admin'] = new ContactDBO( $this->accountDBO->getContactName(),
