@@ -1,3 +1,8 @@
+12/15/2006 - jdiamond
+=====================
+
+ * (trac #83) Fixed the "Cannot redeclare class soapclient" error in the ResellerClub module
+
 12/14/2006 - jdiamond
 =====================
 
